--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -321,6 +321,6 @@ jobs:
             -var="env=${{ env.PROJECT_NAME }}" \
             -var="image_path=gcr.io/arxiv-development/${{env.IMAGE_NAME}}:${{ inputs.image_tag || github.sha }}" \
             -var="read_db_instance=${{ vars.READ_DB_INSTANCE }}" \
-            -var="read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}"
+            -var="read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}" \
             -auto-approve
         working-directory: terraform/stats_api
