--- a/.github/workflows/deploy-stats-db.yml
+++ b/.github/workflows/deploy-stats-db.yml
@@ -89,7 +89,7 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     needs: plan
-    if: success()
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Await for manual approval
