--- a/.github/workflows/deploy-stats-ui.yml
+++ b/.github/workflows/deploy-stats-ui.yml
@@ -52,7 +52,7 @@ jobs:
 
   build-push:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
 
     steps:
       - name: Checkout code
@@ -84,7 +84,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
     if: github.ref == 'refs/heads/main'
     needs: build-push
 
