--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -53,7 +53,7 @@ jobs:
 
   build-push:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
 
     steps:
       - name: Checkout code
@@ -85,7 +85,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
     if: github.ref == 'refs/heads/main'
     needs: build-push
 
