--- a/.github/workflows/deploy-stats-db.yml
+++ b/.github/workflows/deploy-stats-db.yml
@@ -45,7 +45,7 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
     needs: format-check
 
     steps:
@@ -107,7 +107,7 @@ jobs:
       contents: read
       id-token: write
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: ${{ github.events.inputs.env || 'development' }}
     if: github.ref == 'refs/heads/main'
     needs: manual-approval
 
