--- a/.github/workflows/deploy-stats-ui.yml
+++ b/.github/workflows/deploy-stats-ui.yml
@@ -15,13 +15,9 @@ on:
       - "terraform/stats_ui/**"
   workflow_dispatch:
     inputs:
-      env:
-        description: "Environment"
-        required: true
-        type: choice
-        options:
-          - "development"
-          - "production"
+      environment:
+        type: environment
+        description: Select the environment
 
 permissions:
   contents: read
@@ -52,7 +48,7 @@ jobs:
 
   build-push:
     runs-on: ubuntu-latest
-    environment: ${{ github.events.inputs.env || 'development' }}
+    environment: ${{ inputs.environment || 'development' }}
 
     steps:
       - name: Checkout code
@@ -84,7 +80,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.events.inputs.env || 'development' }}
+    environment: ${{ inputs.environment || 'development' }}
     if: github.ref == 'refs/heads/main'
     needs: build-push
 
