--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -18,9 +18,12 @@ on:
       - "terraform/stats_api/**"
   workflow_dispatch:
     inputs:
+      environment:
+        type: environment
+        description: Select the environment
       env:
-        description: "Environment"
-        required: true
+        description: "Environment (for manual override)"
+        required: false
         type: string
         default: ""
       image_tag:
@@ -60,6 +63,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: format-check
+    environment: ${{ inputs.environment || (github.ref == 'refs/heads/main' && 'development') || '' }}
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
@@ -67,7 +72,18 @@ jobs:
 
       - name: Set environment variables
         run: |
-          ENV_NAME="${{ inputs.env }}"
+          # Determine environment from inputs or GitHub environment
+          if [ -n "${{ inputs.env }}" ]; then
+            ENV_NAME="${{ inputs.env }}"
+          elif [ -n "${{ inputs.environment }}" ]; then
+            ENV_NAME="${{ inputs.environment }}"
+          elif [ "${{ github.ref }}" = "refs/heads/main" ]; then
+            ENV_NAME="development"
+          else
+            echo "Error: No environment specified"
+            exit 1
+          fi
+          
           REGION="${{ vars.GCP_REGION || 'us-central1' }}"
           echo "ENVIRONMENT=$ENV_NAME" >> $GITHUB_ENV
           echo "REGION=$REGION" >> $GITHUB_ENV
@@ -76,15 +92,28 @@ jobs:
           if [ "$ENV_NAME" = "production" ]; then
             echo "PROJECT_NAME=arxiv-production" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=prod-arxiv-terraform-state" >> $GITHUB_ENV
+            TERRAFORM_ARGS="-var-file=envs/prod.tfvars"
           elif [ "$ENV_NAME" = "development" ]; then
             echo "PROJECT_NAME=arxiv-development" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=dev-arxiv-terraform-state" >> $GITHUB_ENV
+            TERRAFORM_ARGS="-var-file=envs/dev.tfvars"
           else
             # For custom environments, use the environment name as project name
             echo "PROJECT_NAME=$ENV_NAME" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=$ENV_NAME-arxiv-terraform-state" >> $GITHUB_ENV
             echo "Custom environment detected, using $ENV_NAME as project name"
+            TERRAFORM_ARGS="-var-file=envs/dev.tfvars"
           fi
+          
+          # Add all the individual var arguments
+          TERRAFORM_ARGS="$TERRAFORM_ARGS \
+            -var=\"gcp_project_id=$PROJECT_NAME\" \
+            -var=\"gcp_region=$REGION\" \
+            -var=\"env=${{ vars.ENV_VAR }}\" \
+            -var=\"read_db_instance=${{ vars.READ_DB_INSTANCE }}\" \
+            -var=\"read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}\""
+          
+          echo "TERRAFORM_ARGS=$TERRAFORM_ARGS" >> $GITHUB_ENV
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
@@ -188,8 +217,9 @@ jobs:
           echo "Terraform configuration:"
           echo "  Project: ${{ env.PROJECT_NAME }}"
           echo "  Region: ${{ vars.GCP_REGION }}"
-          echo "  Commit SHA: ${{ inputs.image_tag || github.sha }}"
+          echo "  Commit SHA: ${{ inputs.image_tag || github.sha }}"    
           echo "  Container Image: gcr.io/arxiv-development/${{env.IMAGE_NAME}}:${{ inputs.image_tag || github.sha }}"
+          echo "  TERRAFORM_ARGS: ${{ env.TERRAFORM_ARGS }}"
         working-directory: terraform/stats_api
 
       - name: Initialize remote backend
@@ -199,24 +229,14 @@ jobs:
       - name: Plan
         run: |
           echo "Running terraform plan..."
-          terraform plan \
-            -var="gcp_project_id=${{ env.PROJECT_NAME }}" \
-            -var="gcp_region=${{ vars.GCP_REGION }}" \
-            -var="env=${{ vars.ENV_VAR }}" \
-            -var="image_path=gcr.io/arxiv-development/${{env.IMAGE_NAME}}:${{ inputs.image_tag || github.sha }}" \
-            -var="read_db_instance=${{ vars.READ_DB_INSTANCE }}" \
-            -var="read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}"
+          terraform plan ${{ env.TERRAFORM_ARGS }} \
+            -var="image_path=gcr.io/arxiv-development/${{env.IMAGE_NAME}}:${{ inputs.image_tag || github.sha }}"
         working-directory: terraform/stats_api
 
       - name: Apply
         run: |
           echo "Running terraform apply..."
-          terraform apply \
-            -var="gcp_project_id=${{ env.PROJECT_NAME }}" \
-            -var="gcp_region=${{ vars.GCP_REGION }}" \
-            -var="env=${{ vars.ENV_VAR }}" \
+          terraform apply ${{ env.TERRAFORM_ARGS }} \
             -var="image_path=gcr.io/arxiv-development/${{env.IMAGE_NAME}}:${{ inputs.image_tag || github.sha }}" \
-            -var="read_db_instance=${{ vars.READ_DB_INSTANCE }}" \
-            -var="read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}" \
             -auto-approve
         working-directory: terraform/stats_api
