--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -101,18 +101,13 @@ jobs:
             # For custom environments, use the environment name as project name
             echo "PROJECT_NAME=$ENV_NAME" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=$ENV_NAME-arxiv-terraform-state" >> $GITHUB_ENV
-            echo "Custom environment detected, using $ENV_NAME as project name"
-            TERRAFORM_ARGS="-var-file=envs/dev.tfvars"
+            TERRAFORM_ARGS="-var=\"gcp_project_id=${{ env.PROJECT_NAME }}\" \
+              -var=\"gcp_region=${{ vars.GCP_REGION }}\" \
+              -var=\"env=${{ vars.ENV_VAR }}\" \
+              -var=\"read_db_instance=${{ vars.READ_DB_INSTANCE }}\" \
+              -var=\"read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}\""
           fi
-          
-          # Add all the individual var arguments
-          TERRAFORM_ARGS="$TERRAFORM_ARGS \
-            -var=\"gcp_project_id=$PROJECT_NAME\" \
-            -var=\"gcp_region=$REGION\" \
-            -var=\"env=${{ vars.ENV_VAR }}\" \
-            -var=\"read_db_instance=${{ vars.READ_DB_INSTANCE }}\" \
-            -var=\"read_db_secret_name=${{ vars.READ_DB_SECRET_NAME }}\""
-          
+
           echo "TERRAFORM_ARGS=$TERRAFORM_ARGS" >> $GITHUB_ENV
 
       - name: Set up Google Cloud SDK
