--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -101,7 +101,7 @@ jobs:
             # For custom environments, use the environment name as project name
             echo "PROJECT_NAME=$ENV_NAME" >> $GITHUB_ENV
             echo "TERRAFORM_BUCKET=$ENV_NAME-arxiv-terraform-state" >> $GITHUB_ENV
-            TERRAFORM_ARGS="-var=\"gcp_project_id=$PROJECT_NAME\" \
+            TERRAFORM_ARGS="-var=\"gcp_project_id=$ENV_NAME\" \
               -var=\"gcp_region=$REGION\" \
               -var=\"env=${{ vars.ENV_VAR }}\" \
               -var=\"read_db_instance=${{ vars.READ_DB_INSTANCE }}\" \
