--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -111,11 +111,17 @@ jobs:
       #     workload_identity_provider: ${{ vars.PROVIDER_NAME }}
       #     service_account: ${{ vars.SERVICE_ACCOUNT }}
 
+      # - name: Authenticate with project-specific Workload Identity
+      #   uses: google-github-actions/auth@v3
+      #   with:
+      #     workload_identity_provider: ${{ env.PROVIDER_NAME }}
+      #     service_account: ${{ env.SERVICE_ACCOUNT }}
+
       - name: Authenticate with project-specific Workload Identity
         uses: google-github-actions/auth@v3
         with:
-          workload_identity_provider: ${{ env.PROVIDER_NAME }}
-          service_account: ${{ env.SERVICE_ACCOUNT }}
+          workload_identity_provider: ${{ secrets.ARXIV_DEVELOPMENT_PROVIDER_NAME_SECRET }}
+          service_account: ${{ secrets.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT_SECRET }}
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
