--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -113,6 +113,21 @@ jobs:
       #     workload_identity_provider: ${{ vars.PROVIDER_NAME }}
       #     service_account: ${{ vars.SERVICE_ACCOUNT }}
 
+      - name: Impersonate project service account for deployment
+        run: |
+          # Set the project service account for deployment
+          PROJECT_SA="deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com"
+          echo "Impersonating project service account: $PROJECT_SA"
+          
+          # Set impersonation for all gcloud commands
+          echo "GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=$PROJECT_SA" >> $GITHUB_ENV
+          
+          # Also set it in gcloud config
+          gcloud config set auth/impersonate_service_account $PROJECT_SA
+          
+          # Switch back to target project
+          gcloud config set project ${{ env.PROJECT_NAME }}
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
 
