--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -133,11 +133,26 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.ARXIV_DEVELOPMENT_PROVIDER_NAME_SECRET }}
           service_account: ${{ secrets.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT_SECRET }}
-          project_id: ${{ env.PROJECT_NAME }}
-          delegates: deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
+          # project_id: ${{ env.PROJECT_NAME }}
+          # delegates: deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
+
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
+
+      - name: Get project number
+        run: |
+          echo "Getting project number for project: ${{ env.PROJECT_NAME }}"
+          PROJECT_NUMBER=$(gcloud projects describe ${{ env.PROJECT_NAME }} --format="value(projectNumber)")
+          echo "PROJECT_NUMBER=$PROJECT_NUMBER" >> $GITHUB_ENV
+          echo "Project number: $PROJECT_NUMBER"
+
+      - name: Authenticate with target project service account
+        uses: google-github-actions/auth@v3
+        with:
+          workload_identity_provider: projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions
+          service_account: gha-worker@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
+          project_id: ${{ env.PROJECT_NAME }}
 
       - name: Set up terraform
         uses: hashicorp/setup-terraform@v3
