--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -133,9 +133,6 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.ARXIV_DEVELOPMENT_PROVIDER_NAME_SECRET }}
           service_account: ${{ secrets.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT_SECRET }}
-          # project_id: ${{ env.PROJECT_NAME }}
-          # delegates: deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
-
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
@@ -147,12 +144,36 @@ jobs:
           echo "PROJECT_NUMBER=$PROJECT_NUMBER" >> $GITHUB_ENV
           echo "Project number: $PROJECT_NUMBER"
 
-      - name: Authenticate with target project service account
+      - name: Check workload identity pool exists
+        run: |
+          echo "Checking if workload identity pool exists in target project..."
+          if gcloud iam workload-identity-pools describe github-actions --location=global --project=${{ env.PROJECT_NAME }} >/dev/null 2>&1; then
+            echo "✅ Workload identity pool exists"
+          else
+            echo "❌ Workload identity pool does not exist, creating it..."
+            # This would need to be done via terraform or gcloud commands
+            echo "Workload identity pool needs to be created first"
+            exit 1
+          fi
+
+      - name: Check workload identity provider exists
+        run: |
+          echo "Checking if workload identity provider exists in target project..."
+          if gcloud iam workload-identity-pools providers describe github-actions-provider --location=global --workload-identity-pool=github-actions --project=${{ env.PROJECT_NAME }} >/dev/null 2>&1; then
+            echo "✅ Workload identity provider exists"
+          else
+            echo "❌ Workload identity provider does not exist, creating it..."
+            echo "Workload identity provider needs to be created first"
+            exit 1
+          fi
+
+      - name: Authenticate with target project workload identity
         uses: google-github-actions/auth@v3
         with:
           workload_identity_provider: projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions-provider
           service_account: github-actions-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
           project_id: ${{ env.PROJECT_NAME }}
+          delegates: deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
 
       - name: Set up terraform
         uses: hashicorp/setup-terraform@v3
