--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -155,6 +155,14 @@ jobs:
           project_id: ${{ env.PROJECT_NAME }}
           delegates: deployment-sa@${{ env.PROJECT_NAME }}.iam.gserviceaccount.com
 
+      - name: Switch to target project
+        run: |
+          echo "Switching to target project: ${{ env.PROJECT_NAME }}"
+          gcloud config set project ${{ env.PROJECT_NAME }}
+          echo "Current project: $(gcloud config get-value project)"
+          echo "Current authentication:"
+          gcloud auth list
+
       - name: Set up terraform
         uses: hashicorp/setup-terraform@v3
 
