--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -1,6 +1,6 @@
 name: Build and push stats-api
 
-#run-name: "${{ github.ref_name }} - ${{ github.sha }}"
+run-name: "${{ github.ref_name }} - ${{ github.sha }}"
 
 on:
   push:
