--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -15,12 +15,6 @@ on:
     paths:
       - "stats-api/**"
       - "terraform/stats_api/**"
-  workflow_dispatch:
-    inputs:
-      environment:
-        type: environment
-        description: Select the environment
-        required: true
 
 permissions:
   contents: read
@@ -52,7 +46,7 @@ jobs:
 
   build-push:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment || 'development' }}
+    environment: development
 
     steps:
       - name: Checkout code
