--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -4,17 +4,14 @@ name: Build and push stats-api
 
 on:
   push:
-    branches:
-      - main
     paths:
       - "stats-api/**"
       - "terraform/stats_api/**"
   pull_request:
-    branches:
-      - main
     paths:
       - "stats-api/**"
       - "terraform/stats_api/**"
+  workflow_dispatch:
 
 permissions:
   contents: read
