--- a/.github/workflows/deploy-stats-api.yml
+++ b/.github/workflows/deploy-stats-api.yml
@@ -1,21 +1,21 @@
 name: Deploy stats-api
 
 # Set custom run name to show project name in workflow runs list
-run-name: "Deploy API - ${{ github.event.inputs.env }} - ${{ github.event.inputs.image_tag || github.sha }}"
+run-name: "${{ inputs.env }} - ${{ github.sha }}"
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "stats-api/**"
-      - "terraform/stats_api/**"
-  pull_request:
-    branches:
-      - main
-    paths:
-      - "stats-api/**"
-      - "terraform/stats_api/**"
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - "stats-api/**"
+  #     - "terraform/stats_api/**"
+  # pull_request:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - "stats-api/**"
+  #     - "terraform/stats_api/**"
   workflow_dispatch:
     inputs:
       env:
