--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -19,8 +19,8 @@ permissions:
 env:
   DOCKERFILE: "Dockerfile.api"
   IMAGE_NAME: "stats-api"
-  # PORT: "8080"
-  # TARGET: "runtime"
+  PORT: "8080"
+  TARGET: "runtime"
 
 jobs:
   format-check:
