--- a/.github/workflows/build-stats-api.yml
+++ b/.github/workflows/build-stats-api.yml
@@ -82,7 +82,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-push
-    uses: mg2553/arxiv-iac/.github/workflows/service-deployment-routing.yml@workflow4
+    uses: arXiv/arxiv-iac/.github/workflows/service-deployment-routing.yml@workflow4
     with:
       image_tag: ${{ inputs.custom_sha || github.sha }}
       deploy_workflow: ${{ env.DEPLOY_WORKFLOW }}
